--- a/languages/algolia-headless.pot
+++ b/languages/algolia-headless.pot
@@ -1,10 +1,10 @@
 # Copyright (C) 2020 Hidetaka Okamoto
-# This file is distributed under the same license as the WP Search with Algolia Headless extention package.
+# This file is distributed under the same license as the Search with Algolia Headless extention package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Search with Algolia Headless extention 0.1.0\n"
+"Project-Id-Version: Search with Algolia Headless extention 0.1.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/algolia-headless\n"
-"POT-Creation-Date: 2020-11-13 07:57:46+00:00\n"
+"POT-Creation-Date: 2020-11-16 05:52:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,7 +37,7 @@ msgid "You can replace the post domain from the WordPress to your public site."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WP Search with Algolia Headless extention"
+msgid "Search with Algolia Headless extention"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
